--- a/Views/maritBlanket.xaml
+++ b/Views/maritBlanket.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:GFElevInterview.Views"
+             Background="White"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -11,7 +12,7 @@
             <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                 <StackPanel Margin="10"  Grid.Column="0" Grid.Row="4"  x:Name="meritBlanket" >
 
-
+                    <Button  Width="90" Height="30" Click="Button_Click"/>
                     <Label Content="Ansøgnig om merit på Grundforløb , GF2:" Margin="10" FontSize="20" FontWeight="Bold" />
                     <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="DanskValidation" >
                         <StackPanel Margin="10">
@@ -27,7 +28,7 @@
                                 </CheckBox>
 
                                 <Label Content="Undervis" FontSize="20"/>
-                                <CheckBox x:Name="DanskUndervisChecked"  Margin="5" HorizontalAlignment="Left">
+                                <CheckBox x:Name="DanskUndervisChecked"  Margin="5" HorizontalAlignment="Left" IsChecked="True">
                                     <CheckBox.LayoutTransform>
                                         <ScaleTransform ScaleX="2" ScaleY="2"/>
                                     </CheckBox.LayoutTransform>
@@ -35,13 +36,13 @@
 
                                 <Label Content="Niveau" FontSize="20"/>
                                 <ComboBox x:Name="ComboboDansk" FontSize="20">
-                                    <ComboBoxItem Content="A"/>
+                                    <!--<ComboBoxItem Content="A"/>
                                     <ComboBoxItem Content="B"/>
                                     <ComboBoxItem Content="C"/>
                                     <ComboBoxItem Content="D"/>
                                     <ComboBoxItem Content="E"/>
                                     <ComboBoxItem Content="F"/>
-                                    <ComboBoxItem Content="G"/>
+                                    <ComboBoxItem Content="G"/>-->
                                 </ComboBox>
                             </DockPanel>
 
