--- a/Views/maritBlanket.xaml
+++ b/Views/maritBlanket.xaml
@@ -12,7 +12,7 @@
             <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                 <StackPanel Margin="10"  Grid.Column="0" Grid.Row="4"  x:Name="meritBlanket" >
 
-                    <Button  Width="90" Height="30" Click="Button_Click"/>
+                    <Button  Width="90" Height="30" Click="_IsValidated"/>
                     <Label Content="Ansøgnig om merit på Grundforløb , GF2:" Margin="10" FontSize="20" FontWeight="Bold" />
                     <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="DanskValidation" >
                         <StackPanel Margin="10">
@@ -73,13 +73,13 @@
 
                                 <Label Content="Niveau" FontSize="20"/>
                                 <ComboBox x:Name="ComboboxEngelsk" FontSize="20">
-                                    <ComboBoxItem Content="A"/>
+                                    <!--<ComboBoxItem Content="A"/>
                                     <ComboBoxItem Content="B"/>
                                     <ComboBoxItem Content="C"/>
                                     <ComboBoxItem Content="D"/>
                                     <ComboBoxItem Content="E"/>
                                     <ComboBoxItem Content="F"/>
-                                    <ComboBoxItem Content="G"/>
+                                    <ComboBoxItem Content="G"/>-->
                                 </ComboBox>
                             </DockPanel>
 
@@ -111,13 +111,13 @@
 
                                 <Label Content="Niveau" FontSize="20"/>
                                 <ComboBox x:Name="ComboboxMatematik" FontSize="20">
-                                    <ComboBoxItem Content="A"/>
+                                    <!--<ComboBoxItem Content="A"/>
                                     <ComboBoxItem Content="B"/>
                                     <ComboBoxItem Content="C"/>
                                     <ComboBoxItem Content="D"/>
                                     <ComboBoxItem Content="E"/>
                                     <ComboBoxItem Content="F"/>
-                                    <ComboBoxItem Content="G"/>
+                                    <ComboBoxItem Content="G"/>-->
                                 </ComboBox>
                             </DockPanel>
 
