--- a/Views/MeritBlanketView.xaml
+++ b/Views/MeritBlanketView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="GFElevInterview.Views.maritBlanket"
+﻿<UserControl x:Class="GFElevInterview.Views.MeritBlanketView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,8 +12,7 @@
             <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
                 <StackPanel Margin="10"  Grid.Column="0" Grid.Row="4"  x:Name="meritBlanket" >
 
-                    <Button  Width="90" Height="30" Click="_IsValidated"/>
-                    <Label Content="Ansøgnig om merit på Grundforløb , GF2:" Margin="10" FontSize="20" FontWeight="Bold" />
+                    <Label Content="Ansøgning om merit på Grundforløb , GF2:" Margin="10" FontSize="20" FontWeight="Bold" />
                     <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="DanskValidation" >
                         <StackPanel Margin="10">
                             <Label Content="Dansk:" FontSize="20" FontWeight="Bold"/>
@@ -28,7 +27,7 @@
                                 </CheckBox>
 
                                 <Label Content="Undervis" FontSize="20"/>
-                                <CheckBox x:Name="DanskUndervisChecked"  Margin="5" HorizontalAlignment="Left" IsChecked="True">
+                                <CheckBox x:Name="DanskUndervisChecked"  Margin="5" HorizontalAlignment="Left">
                                     <CheckBox.LayoutTransform>
                                         <ScaleTransform ScaleX="2" ScaleY="2"/>
                                     </CheckBox.LayoutTransform>
@@ -36,13 +35,6 @@
 
                                 <Label Content="Niveau" FontSize="20"/>
                                 <ComboBox x:Name="ComboboDansk" FontSize="20">
-                                    <!--<ComboBoxItem Content="A"/>
-                                    <ComboBoxItem Content="B"/>
-                                    <ComboBoxItem Content="C"/>
-                                    <ComboBoxItem Content="D"/>
-                                    <ComboBoxItem Content="E"/>
-                                    <ComboBoxItem Content="F"/>
-                                    <ComboBoxItem Content="G"/>-->
                                 </ComboBox>
                             </DockPanel>
 
@@ -73,13 +65,6 @@
 
                                 <Label Content="Niveau" FontSize="20"/>
                                 <ComboBox x:Name="ComboboxEngelsk" FontSize="20">
-                                    <!--<ComboBoxItem Content="A"/>
-                                    <ComboBoxItem Content="B"/>
-                                    <ComboBoxItem Content="C"/>
-                                    <ComboBoxItem Content="D"/>
-                                    <ComboBoxItem Content="E"/>
-                                    <ComboBoxItem Content="F"/>
-                                    <ComboBoxItem Content="G"/>-->
                                 </ComboBox>
                             </DockPanel>
 
@@ -111,13 +96,6 @@
 
                                 <Label Content="Niveau" FontSize="20"/>
                                 <ComboBox x:Name="ComboboxMatematik" FontSize="20">
-                                    <!--<ComboBoxItem Content="A"/>
-                                    <ComboBoxItem Content="B"/>
-                                    <ComboBoxItem Content="C"/>
-                                    <ComboBoxItem Content="D"/>
-                                    <ComboBoxItem Content="E"/>
-                                    <ComboBoxItem Content="F"/>
-                                    <ComboBoxItem Content="G"/>-->
                                 </ComboBox>
                             </DockPanel>
 
