--- a/Views/maritBlanket.xaml
+++ b/Views/maritBlanket.xaml
@@ -12,7 +12,7 @@
                 <StackPanel Margin="10"  Grid.Column="0" Grid.Row="4"  x:Name="meritBlanket" >
 
 
-                    <Label Content="Ansøgnig om merit på Grundforløb , GF2:" Margin="10" FontSize="20" FontWeight="Bold" />
+                    <Label Content="Ansøgnig om merit på Grundforløb , GF2:" Margin="10" FontSize="20" FontWeight="Bold" FontStyle="Italic" />
                     <Border BorderBrush="Gray" BorderThickness="1" Margin="10" x:Name="DanskValidation" >
                         <StackPanel Margin="10">
                             <Label Content="Dansk:" FontSize="20" FontWeight="Bold"/>
