--- a/Views/BlanketView.xaml
+++ b/Views/BlanketView.xaml
@@ -10,18 +10,18 @@
         <Border Background="WhiteSmoke" x:Name="blanketView" BorderBrush="Gray" BorderThickness="2" >
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="150"/>
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="100"/>
                 </Grid.RowDefinitions>
 
-                <Border Grid.Row="0" BorderBrush="Gray" BorderThickness="1" Panel.ZIndex="10" Grid.RowSpan="2">
+                <Border Grid.Row="0" BorderBrush="Gray" BorderThickness="1" Panel.ZIndex="10"  Grid.RowSpan="2">
                     <StackPanel  >
                             <WrapPanel>
                                 <Label FontSize="20" FontWeight="Bold" FontStyle="Italic" >Søge elev :</Label>
                                 <TextBox x:Name="SearchStudentTxt"  Margin="10" Width="650"  Height="30"  Background="WhiteSmoke" TextChanged="SearchStudentTxt_TextChanged"  />
                             </WrapPanel>
-                            <ListBox x:Name="SearchStudentBox" Background="WhiteSmoke"  SelectionChanged="SearchStudentBox_SelectionChanged" Panel.ZIndex="1" Grid.RowSpan="2" >
+                        <ListBox x:Name="SearchStudentBox" MaxHeight="50" Background="WhiteSmoke"  SelectionChanged="SearchStudentBox_SelectionChanged" Panel.ZIndex="1" Grid.RowSpan="2" >
                                 <ListBox.ItemTemplate>
                                     <DataTemplate>
                                         <TextBlock Text="{Binding  FullInfo}"/>
